# SlicerOpenLIFU

./: AGENTS.md  CMakeLists.txt  README.md  db_dvc_slicertesting.dvc
OpenLIFU/: CMakeLists.txt  OpenLIFU.py
OpenLIFU/Resources/UI/: OpenLIFU.ui
OpenLIFUCloudSync/: CMakeLists.txt  OpenLIFUCloudSync.py
OpenLIFUCloudSync/OpenLIFUCloudSyncEngine/: CMakeLists.txt  OpenLIFUCloudSyncCLI.py
OpenLIFUCloudSync/Resources/UI/: OpenLIFUCloudSync.ui
OpenLIFUData/: CMakeLists.txt  OpenLIFUData.py
OpenLIFUData/Resources/UI/: OpenLIFUData.ui
OpenLIFUDatabase/: CMakeLists.txt  OpenLIFUDatabase.py
OpenLIFUDatabase/Resources/UI/: OpenLIFUDatabase.ui
OpenLIFUHome/: CMakeLists.txt  OpenLIFUHome.py
OpenLIFUHome/Resources/UI/: OpenLIFUHome.ui
OpenLIFULib/: CMakeLists.txt
OpenLIFULib/OpenLIFULib/: __init__.py  algorithm_input_widget.py  class_definition_widgets.py  coordinate_system_utils.py  dependency_utils.py  guided_mode_util.py  kiosk_util.py  lazyimport.py  meshroom_install_cli.py  meshroom_install_gui.py  module_layout.py  parameter_node_utils.py  photoscan.py  photoscan_registrations.py  session.py  simulation.py  skinseg.py  slicer_sync_runner.py  solution.py  targets.py  transducer.py  transducer_tracking_results.py  transducer_tracking_wizard_utils.py  transform_conversion.py  user_account_mode_util.py  util.py  view_state.py  virtual_fit_results.py  volume_thresholding.py
OpenLIFULib/OpenLIFULib/Resources/: .gitignore  python-requirements.txt
OpenLIFULogin/: CMakeLists.txt  OpenLIFULogin.py
OpenLIFULogin/Resources/UI/: OpenLIFULogin.ui
OpenLIFUPrePlanning/: OpenLIFUPrePlanning.py
OpenLIFUPrePlanning/Resources/UI/: OpenLIFUPrePlanning.ui
OpenLIFUProtocolConfig/: OpenLIFUProtocolConfig.py
OpenLIFUProtocolConfig/Resources/UI/: OpenLIFUProtocolConfig.ui
OpenLIFUProtocolConfiguration/: CMakeLists.txt  OpenLIFUProtocolConfiguration.py
OpenLIFUProtocolConfiguration/Resources/UI/: OpenLIFUProtocolConfiguration.ui
OpenLIFUSession/: CMakeLists.txt  OpenLIFUSession.py
OpenLIFUSession/Resources/UI/: OpenLIFUSession.ui
OpenLIFUSonicationControl/: OpenLIFUSonicationControl.py
OpenLIFUSonicationControl/Resources/UI/: OpenLIFUSonicationControl.ui
OpenLIFUSonicationPlanner/: OpenLIFUSonicationPlanner.py
OpenLIFUSonicationPlanner/Resources/UI/: OpenLIFUSonicationPlanner.ui
OpenLIFUSonicationPlanning/: CMakeLists.txt  OpenLIFUSonicationPlanning.py
OpenLIFUSonicationPlanning/Resources/UI/: OpenLIFUSonicationPlanning.ui
OpenLIFUTextureModel/: CMakeLists.txt  OpenLIFUTextureModel.py
OpenLIFUTransducerLocalization/: CMakeLists.txt  OpenLIFUTransducerLocalization.py
OpenLIFUTransducerLocalization/Resources/UI/: OpenLIFUTransducerLocalization.ui  TransducerLocalizationWizard.ui
OpenLIFUTransducerTracker/: CMakeLists.txt  OpenLIFUTransducerTracker.py
OpenLIFUTransducerTracker/Resources/UI/: OpenLIFUTransducerTracker.ui  PhotoscanPreview.ui  TransducerTrackingWizard.ui
OpenLIFUTransducerTracking/: CMakeLists.txt  OpenLIFUTransducerTracking.py
OpenLIFUTransducerTracking/Resources/UI/: OpenLIFUTransducerTracking.ui
